--- a/main.html
+++ b/main.html
@@ -8,6 +8,63 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Bootstrap Grid Layout</title>
+
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+
+<div class="container-fluid">
+
+    <!-- First Row: 12 columns (col-sm-1) -->
+    <div class="row">
+        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+    </div>
+
+    <!-- Second Row: 6 columns (col-sm-2) -->
+    <div class="row">
+        <div class="col-sm-2"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-2"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-2"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-2"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-2"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-2"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+    </div>
+
+    <!-- Third Row: 3 columns (col-sm-4) -->
+    <div class="row">
+        <div class="col-sm-4"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-4"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-4"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+    </div>
+
+    <!-- Fourth Row: 1 column (col-sm-12) -->
+    <div class="row">
+        <div class="col-sm-12"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+    </div>
+
+</div>
+
+</body>
+</html>
+
+
     <script type="text/javascript" src="./script.js">
 </script>
 
