--- a/main.html
+++ b/main.html
@@ -1,14 +1,4 @@
 <!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-	<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,53 +11,45 @@
 
 <div class="container-fluid">
 
-    <!-- First Row: 12 columns (col-sm-1) -->
+    <!-- First Row: 12 columns -->
     <div class="row">
-        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
-        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
-        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
-        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
-        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
-        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
-        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
-        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
-        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
-        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
-        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
-        <div class="col-sm-1"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
+        <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
+        <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
+        <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
+        <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
+        <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
+        <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
+        <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
+        <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
+        <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
+        <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
+        <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
     </div>
 
-    <!-- Second Row: 6 columns (col-sm-2) -->
+    <!-- Second Row: 6 columns -->
     <div class="row">
-        <div class="col-sm-2"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
-        <div class="col-sm-2"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
-        <div class="col-sm-2"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
-        <div class="col-sm-2"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
-        <div class="col-sm-2"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
-        <div class="col-sm-2"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-2"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
+        <div class="col-sm-2"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
+        <div class="col-sm-2"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
+        <div class="col-sm-2"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
+        <div class="col-sm-2"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
+        <div class="col-sm-2"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
     </div>
 
-    <!-- Third Row: 3 columns (col-sm-4) -->
+    <!-- Third Row: 3 columns -->
     <div class="row">
-        <div class="col-sm-4"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
-        <div class="col-sm-4"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
-        <div class="col-sm-4"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-4"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
+        <div class="col-sm-4"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
+        <div class="col-sm-4"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
     </div>
 
-    <!-- Fourth Row: 1 column (col-sm-12) -->
+    <!-- Fourth Row: 1 column -->
     <div class="row">
-        <div class="col-sm-12"><img src="https://via.placeholder.com/100" width="100" height="100" alt="img"></div>
+        <div class="col-sm-12"><img src="https://goswift.in/img/logo.png" width="100" height="100"></div>
     </div>
 
 </div>
 
 </body>
-</html>
-
-
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
 </html>
